--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
 
   dos:
     runs-on: ubuntu-latest
-    needs: uno  # El trabajo dos depende del éxito de uno
+    needs: [uno]
     steps:
       - name: Directorio
         run: ls -al
